overlapping issue fixed so draggable UI element will display above appender buttons

--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -106,6 +106,10 @@
 	}
 }
 
+.wp-block[data-type="c9-blocks/grid"].components-resizable-box__side-handle.components-resizable-box__handle-bottom {
+	z-index: 12;
+}
+
 .c9-add-remove-rows {
 	position: absolute;
 	left: 50%;
